@@ -1,0 +1,19 @@
+#!/usr/bin/env python3
+
+# stdlib
+import os
+import sys
+
+# local
+import lib.consul_config
+
+
+# =============================================================================
+# main
+# =============================================================================
+def main(args: list) -> None:
+    lib.consul_config.main(os.environ)
+
+
+if __name__ == "__main__":
+    main(sys.argv[1:])
