@@ -1,3 +1,9 @@
+2019-01-02
+
+- added consul-config to consul-wrapper
+  - supports consuming terraform outputs as consul configuration parameters
+- renamed consul related param vars to CT_CONSUL_
+
 2018-12-28
 
 - added output tasks
